add lint, with drone & remember results

--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,8 @@ android {
 
     lintOptions {
         abortOnError false
+        htmlReport true
+        htmlOutput file("$project.buildDir/reports/lint/lint.html")
+        disable 'MissingTranslation'
     }
 }
